objects/amazonconnect__AC_HistoricalQueueMetrics__c.object
<CustomObject>
    <description>Amazon Connect Historical Queue Metrics report data</description>
    <fields>
        <fullName>amazonconnect__AC_Object_Name__c</fullName>
        <label>AC Object Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__AC_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>AC Record Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>amazonconnect__API_contacts__c</fullName>
        <label>API contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__API_contacts_handled__c</fullName>
        <label>API contacts handled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__After_contact_work_time__c</fullName>
        <label>After contact work time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__After_contact_work_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__After_contact_work_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__After_contact_work_time__c/3600)), TEXT(FLOOR(amazonconnect__After_contact_work_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__After_contact_work_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__After_contact_work_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__After_contact_work_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__After_contact_work_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__After_contact_work_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__After_contact_work_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>After contact work time hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_answer_rate__c</fullName>
        <label>Agent answer rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_idle_time__c</fullName>
        <label>Agent idle time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_idle_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Agent_idle_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Agent_idle_time__c/3600)), TEXT(FLOOR(amazonconnect__Agent_idle_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Agent_idle_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Agent_idle_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Agent_idle_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Agent_idle_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_idle_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_idle_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent_idle_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_interaction_and_hold_time__c</fullName>
        <label>Agent interaction and hold time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_interaction_and_hold_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Agent_interaction_and_hold_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Agent_interaction_and_hold_time__c/3600)), TEXT(FLOOR(amazonconnect__Agent_interaction_and_hold_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Agent_interaction_and_hold_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Agent_interaction_and_hold_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Agent_interaction_and_hold_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Agent_interaction_and_hold_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_interaction_and_hold_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_interaction_and_hold_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent_interaction_and_hold_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_interaction_time__c</fullName>
        <label>Agent interaction time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_interaction_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Agent_interaction_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Agent_interaction_time__c/3600)), TEXT(FLOOR(amazonconnect__Agent_interaction_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Agent_interaction_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Agent_interaction_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Agent_interaction_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Agent_interaction_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_interaction_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_interaction_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent_interaction_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_non_response__c</fullName>
        <label>Agent non-response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_on_contact_time__c</fullName>
        <label>Agent on contact time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Agent_on_contact_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Agent_on_contact_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Agent_on_contact_time__c/3600)), TEXT(FLOOR(amazonconnect__Agent_on_contact_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Agent_on_contact_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Agent_on_contact_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Agent_on_contact_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Agent_on_contact_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_on_contact_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Agent_on_contact_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent_on_contact_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_after_contact_work_time__c</fullName>
        <label>Average after contact work time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_after_contact_work_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Average_after_contact_work_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Average_after_contact_work_time__c/3600)), TEXT(FLOOR(amazonconnect__Average_after_contact_work_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Average_after_contact_work_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Average_after_contact_work_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Average_after_contact_work_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Average_after_contact_work_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Average_after_contact_work_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Average_after_contact_work_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average_after_contact_work_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_agent_interaction_time__c</fullName>
        <label>Average agent interaction time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_agent_interaction_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Average_agent_interaction_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Average_agent_interaction_time__c/3600)), TEXT(FLOOR(amazonconnect__Average_agent_interaction_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Average_agent_interaction_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Average_agent_interaction_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Average_agent_interaction_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Average_agent_interaction_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Average_agent_interaction_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Average_agent_interaction_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average_agent_interaction_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_customer_hold_time__c</fullName>
        <label>Average customer hold time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_customer_hold_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Average_customer_hold_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Average_customer_hold_time__c/3600)), TEXT(FLOOR(amazonconnect__Average_customer_hold_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Average_customer_hold_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Average_customer_hold_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Average_customer_hold_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Average_customer_hold_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Average_customer_hold_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Average_customer_hold_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average_customer_hold_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_handle_time__c</fullName>
        <label>Average handle time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_handle_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Average_handle_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Average_handle_time__c/3600)), TEXT(FLOOR(amazonconnect__Average_handle_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Average_handle_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Average_handle_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Average_handle_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Average_handle_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Average_handle_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Average_handle_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average_handle_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_outbound_after_contact_work_time__c</fullName>
        <label>Average outbound after contact work time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_outbound_agent_interaction_time__c</fullName>
        <label>Average outbound agent interaction time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_queue_abandon_time__c</fullName>
        <label>Average queue abandon time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_queue_abandon_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Average_queue_abandon_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Average_queue_abandon_time__c/3600)), TEXT(FLOOR(amazonconnect__Average_queue_abandon_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Average_queue_abandon_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Average_queue_abandon_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Average_queue_abandon_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Average_queue_abandon_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Average_queue_abandon_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Average_queue_abandon_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average_queue_abandon_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_queue_answer_time__c</fullName>
        <label>Average queue answer time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Average_queue_answer_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Average_queue_answer_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Average_queue_answer_time__c/3600)), TEXT(FLOOR(amazonconnect__Average_queue_answer_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Average_queue_answer_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Average_queue_answer_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Average_queue_answer_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Average_queue_answer_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Average_queue_answer_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Average_queue_answer_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average_queue_answer_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Avg_agent_interaction_and_cust_hold_time__c</fullName>
        <label>Avg agent interaction and cust hold time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Avg_agent_intn_and_cust_hld_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c/3600)), TEXT(FLOOR(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Avg_agent_interaction_and_cust_hold_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg_agent_intn_and_cust_hld_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Avg_outbound_after_contact_work_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Average_outbound_after_contact_work_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Average_outbound_after_contact_work_time__c/3600)), TEXT(FLOOR(amazonconnect__Average_outbound_after_contact_work_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Average_outbound_after_contact_work_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Average_outbound_after_contact_work_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Average_outbound_after_contact_work_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Average_outbound_after_contact_work_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Average_outbound_after_contact_work_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Average_outbound_after_contact_work_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg_outbound_after_contact_work_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Avg_outbound_agent_interaction_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Average_outbound_agent_interaction_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Average_outbound_agent_interaction_time__c/3600)), TEXT(FLOOR(amazonconnect__Average_outbound_agent_interaction_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Average_outbound_agent_interaction_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Average_outbound_agent_interaction_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Average_outbound_agent_interaction_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Average_outbound_agent_interaction_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Average_outbound_agent_interaction_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Average_outbound_agent_interaction_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg_outbound_agent_interaction_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Callback_contacts__c</fullName>
        <label>Callback contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Callback_contacts_handled__c</fullName>
        <label>Callback contacts handled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contact_flow_time__c</fullName>
        <label>Contact flow time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contact_flow_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Contact_flow_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Contact_flow_time__c/3600)), TEXT(FLOOR(amazonconnect__Contact_flow_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Contact_flow_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Contact_flow_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Contact_flow_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Contact_flow_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Contact_flow_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Contact_flow_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_flow_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contact_handle_time__c</fullName>
        <label>Contact handle time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contact_handle_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Contact_handle_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Contact_handle_time__c/3600)), TEXT(FLOOR(amazonconnect__Contact_handle_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Contact_handle_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Contact_handle_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Contact_handle_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Contact_handle_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Contact_handle_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Contact_handle_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_handle_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_Consulted__c</fullName>
        <label>Contacts Consulted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_Incoming__c</fullName>
        <label>Contacts Incoming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_abandoned__c</fullName>
        <label>Contacts abandoned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_abandoned_in_120_seconds__c</fullName>
        <label>Contacts abandoned in 120 seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_abandoned_in_15_seconds__c</fullName>
        <label>Contacts abandoned in 15 seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_abandoned_in_180_seconds__c</fullName>
        <label>Contacts abandoned in 180 seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_agent_hung_up_first__c</fullName>
        <label>Contacts agent hung up first</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_answered_in_120_seconds__c</fullName>
        <label>Contacts answered in 120 seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_answered_in_15_seconds__c</fullName>
        <label>Contacts answered in 15 seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_answered_in_180_seconds__c</fullName>
        <label>Contacts answered in 180 seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_handled__c</fullName>
        <label>Contacts handled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_handled_incoming__c</fullName>
        <label>Contacts handled incoming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_handled_outbound__c</fullName>
        <label>Contacts handled outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_hold_agent_disconnect__c</fullName>
        <label>Contacts hold agent disconnect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_hold_customer_disconnect__c</fullName>
        <label>Contacts hold customer disconnect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_hold_disconnect__c</fullName>
        <label>Contacts hold disconnect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_missed__c</fullName>
        <label>Contacts missed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_put_on_hold__c</fullName>
        <label>Contacts put on hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_queued__c</fullName>
        <label>Contacts queued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_transferred_in__c</fullName>
        <label>Contacts transferred in</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_transferred_in_from_queue__c</fullName>
        <label>Contacts transferred in from queue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_transferred_out__c</fullName>
        <label>Contacts transferred out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_transferred_out_external__c</fullName>
        <label>Contacts transferred out external</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_transferred_out_from_queue__c</fullName>
        <label>Contacts transferred out from queue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Contacts_transferred_out_internal__c</fullName>
        <label>Contacts transferred out internal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Customer_hold_time__c</fullName>
        <label>Customer hold time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Customer_hold_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Customer_hold_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Customer_hold_time__c/3600)), TEXT(FLOOR(amazonconnect__Customer_hold_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Customer_hold_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Customer_hold_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Customer_hold_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Customer_hold_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Customer_hold_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Customer_hold_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer_hold_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__EndInterval__c</fullName>
        <label>End Interval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Maximum_queued_time__c</fullName>
        <label>Maximum queued time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Maximum_queued_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Maximum_queued_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Maximum_queued_time__c/3600)), TEXT(FLOOR(amazonconnect__Maximum_queued_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Maximum_queued_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Maximum_queued_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Maximum_queued_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Maximum_queued_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Maximum_queued_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Maximum_queued_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum_queued_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Nonproductive_time__c</fullName>
        <label>Nonproductive time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Nonproductive_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Nonproductive_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Nonproductive_time__c/3600)), TEXT(FLOOR(amazonconnect__Nonproductive_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Nonproductive_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Nonproductive_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Nonproductive_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Nonproductive_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Nonproductive_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Nonproductive_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nonproductive_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Not_Available_time__c</fullName>
        <label>Not Available time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Not_Available_time_hms__c</fullName>
        <formula>IF((FLOOR(amazonconnect__Not_Available_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(amazonconnect__Not_Available_time__c/3600)), TEXT(FLOOR(amazonconnect__Not_Available_time__c/3600))) + &quot;:&quot; + IF ((MOD(amazonconnect__Not_Available_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(amazonconnect__Not_Available_time__c,3600)/60)), TEXT(FLOOR(MOD(amazonconnect__Not_Available_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(amazonconnect__Not_Available_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(amazonconnect__Not_Available_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(amazonconnect__Not_Available_time__c,3600),60))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not_Available_time_hms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Occupancy__c</fullName>
        <label>Occupancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Service_level_120_seconds__c</fullName>
        <label>Service level 120 seconds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Service_level_15_seconds__c</fullName>
        <label>Service level 15 seconds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Service_level_180_seconds__c</fullName>
        <label>Service level 180 seconds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amazonconnect__StartInterval__c</fullName>
        <label>Start Interval</label>
        <type>DateTime</type>
    </fields>
    <label>AC Historical Queue Metrics</label>
    <nameField>
        <label>AC Historical Queue Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Historical Queue Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>